k8s/ingress/kubecart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecart-ingress
  namespace: kubecart
spec:
  ingressClassName: nginx
  rules:
    - host: kubecart.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubecart-service
                port:
                  number: 80
